@@ -1,12 +1,12 @@
-//package shoesShop.common.OrderLine;
-//
-//import java.util.Collection;
-//import java.util.stream.Collectors;
-//
-//import org.springframework.beans.factory.annotation.Autowired;
-//import org.springframework.stereotype.Service;
-//
-//import shoesShop.common.RecordManager;
+package shoesShop.common.OrderLine;
+
+import java.util.Collection;
+import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import shoesShop.common.RecordManager;
 //import shoesShop.common.Order.IOrderRepository;
 //import shoesShop.common.Product.IProductRepository;
 //import shoesShop.common.ProductItem.IProductItemRepository;
@@ -14,30 +14,29 @@
 //import shoesShop.common.OrderLine.IOrderLineRepository;
 //import shoesShop.common.OrderLine.OrderLine;
 //import shoesShop.common.OrderLine.OrderLineConverter;
-//
-//@Service
-//public class OrderLineService  extends RecordManager<OrderLine> {
-//	@Autowired
-//	IOrderLineRepository orderLineRepo;
-//
+
+@Service
+public class OrderLineService  extends RecordManager<OrderLine> {
+	@Autowired
+	IOrderLineRepository orderLineRepo;
+
 //	@Autowired
 //	IProductRepository productRepo;
 //
 //	@Autowired
 //	IOrderRepository orderRepo;
-//	
-//	@Autowired
-//	IProductItemRepository productItemRepo;
-//	OrderLineConverter converter = new OrderLineConverter();
-//
-//	
-//	@Override
-//	public Collection<OrderLine> retrieveAll() {
-//		Collection<OrderLine> OrderLines = this.load(null, null, null).stream()
-//				.map(dbOrderLine -> this.converter.convertDbToModel(dbOrderLine)).collect(Collectors.toList());
-//		return OrderLines;
-//	}
-//
+
+	OrderLineConverter converter = new OrderLineConverter();
+	
+	
+	
+	@Override
+	public Collection<OrderLine> retrieveAll() {
+		Collection<OrderLine> orderLines = this.load(null, null).stream()
+				.map(dbOrderLine -> this.converter.convertDbToModel(dbOrderLine)).toList();
+		return orderLines;
+	}
+
 //	@Override
 //	public OrderLine create(OrderLine orderLine) throws Exception {
 //		DbOrderLine dbOrderLine = this.converter.convertModelToDb(orderLine);
@@ -60,27 +59,27 @@
 //		return orderLines;
 //	}
 //
-//	private Collection<DbOrderLine> load(Integer orderLineId, Integer productitemId, String orderId) {
-//		Collection<DbOrderLine> dbOrderLines = this.orderLineRepo.findAll();
-//
-//		if (orderLineId != null) {
-//			dbOrderLines = dbOrderLines.stream()
-//					.filter(dbOrderLine -> dbOrderLine.orderLineId == orderLineId).collect(Collectors.toList());
-//		}
-//
-//
+	private Collection<DbOrderLine> load(Integer orderLineId, String orderId) {
+		Collection<DbOrderLine> dbOrderLines = this.orderLineRepo.findAll();
+
+		if (orderLineId != null) {
+			dbOrderLines = dbOrderLines.stream()
+					.filter(dbOrderLine -> dbOrderLine.orderLineId == orderLineId).collect(Collectors.toList());
+		}
+
+
 //		if (productitemId != null) {
 //			dbOrderLines = dbOrderLines.stream()
 //					.filter(dbOrderLine -> dbOrderLine.productItem.productItemId == productitemId)
 //					.collect(Collectors.toList());
 //		}
-//
-//		if (orderId != null) {
-//			dbOrderLines = dbOrderLines.stream()
-//					.filter(dbOrderLine -> dbOrderLine.order.orderId == orderId)
-//					.collect(Collectors.toList());
-//		}
-//
-//		return dbOrderLines;
-//	}
-//}
+
+		if (orderId != null) {
+			dbOrderLines = dbOrderLines.stream()
+					.filter(dbOrderLine -> dbOrderLine.order.orderId == orderId)
+					.collect(Collectors.toList());
+		}
+
+		return dbOrderLines;
+	}
+}
